[project]
name = "lloydsteam6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.2",
    "google-adk>=2.3.0",
    "google-cloud-geminidataanalytics>=0.13.1",
    "pandas>=3.0.3",
    "vl-convert-python>=1.9.0.post1",
]
